--- a/Assets/Scripts/Gameplay/Runtime/StoryEngine/MerchantStory.StoryEngine.asmdef
+++ b/Assets/Scripts/Gameplay/Runtime/StoryEngine/MerchantStory.StoryEngine.asmdef
@@ -2,7 +2,11 @@
     "name": "MerchantStory.StroyEngine",
     "rootNamespace": "",
     "references": [
-        "GUID:9e24947de15b9834991c9d8411ea37cf"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
+        "GUID:9e24947de15b9834991c9d8411ea37cf",
+        "GUID:cf181d8cd20b34104b286f65bd9066e3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
