feat: swipe support

--- a/Assets/Scripts/Core/Runtime/MerchantStory.Core.asmdef
+++ b/Assets/Scripts/Core/Runtime/MerchantStory.Core.asmdef
@@ -9,7 +9,8 @@
         "GUID:db4cee5b10aa94d3f96d93f1103af05f",
         "GUID:cf181d8cd20b34104b286f65bd9066e3",
         "GUID:93511bba9bfb413d89499b2489895b3f",
-        "GUID:6e27339e001e41a68053a87ab36ccba6"
+        "GUID:6e27339e001e41a68053a87ab36ccba6",
+        "GUID:0174f7dfda8ae437aa2ec36c4f63ec97"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
