fix: situations cycle

--- a/Assets/Scripts/Core/Runtime/MerchantStory.Core.asmdef
+++ b/Assets/Scripts/Core/Runtime/MerchantStory.Core.asmdef
@@ -4,13 +4,15 @@
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
         "GUID:db4cee5b10aa94d3f96d93f1103af05f",
         "GUID:cf181d8cd20b34104b286f65bd9066e3",
         "GUID:93511bba9bfb413d89499b2489895b3f",
         "GUID:6e27339e001e41a68053a87ab36ccba6",
-        "GUID:0174f7dfda8ae437aa2ec36c4f63ec97"
+        "GUID:0174f7dfda8ae437aa2ec36c4f63ec97",
+        "GUID:9659686c84c144fcea0cc5a5a5786373"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
