--- a/Assets/Scripts/Gameplay/Runtime/StoryEngine/MerchantStory.StoryEngine.asmdef
+++ b/Assets/Scripts/Gameplay/Runtime/StoryEngine/MerchantStory.StoryEngine.asmdef
@@ -8,7 +8,10 @@
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:cf181d8cd20b34104b286f65bd9066e3",
         "GUID:93511bba9bfb413d89499b2489895b3f",
-        "GUID:44210f05355440419491f987e144a6b0"
+        "GUID:44210f05355440419491f987e144a6b0",
+        "GUID:9659686c84c144fcea0cc5a5a5786373",
+        "GUID:0174f7dfda8ae437aa2ec36c4f63ec97",
+        "GUID:c1e338ca6b8246108d25e27ff8baca9c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
