--- a/Assets/Scripts/UI/Runtime/MerchantStory.UI.asmdef
+++ b/Assets/Scripts/UI/Runtime/MerchantStory.UI.asmdef
@@ -6,7 +6,9 @@
         "GUID:d9b374b0d931455cb6ede9abbd8750f6",
         "GUID:776d03a35f1b52c4a9aed9f56d7b4229",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:c1e338ca6b8246108d25e27ff8baca9c",
+        "GUID:cf181d8cd20b34104b286f65bd9066e3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
