--- a/Assets/Scripts/Core/Runtime/Input/MerchantStory.Input.asmdef
+++ b/Assets/Scripts/Core/Runtime/Input/MerchantStory.Input.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:c1e338ca6b8246108d25e27ff8baca9c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
