--- a/Assets/Scripts/Core/Runtime/Utilities/MerchantStory.Utilities.asmdef
+++ b/Assets/Scripts/Core/Runtime/Utilities/MerchantStory.Utilities.asmdef
@@ -1,3 +1,17 @@
 {
-  "name": "MerchantStory.Utilities"
+    "name": "MerchantStory.Utilities",
+    "rootNamespace": "",
+    "references": [
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:560b04d1a97f54a4e82edc0cbbb69285"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
