--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,11 +6,12 @@
     "com.neuecc.unirx": "7.1.0",
     "com.svermeulen.extenject": "9.2.0-stcf3",
     "com.unity.addressables.android": "1.0.4",
-    "com.unity.collab-proxy": "2.4.4",
+    "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.9.0",
+    "com.unity.inputsystem": "1.11.1",
+    "com.unity.multiplayer.center": "1.0.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.test-framework": "1.4.5",
