--- a/Assets/Scripts/UI/Runtime/MerchantStory.UI.asmdef
+++ b/Assets/Scripts/UI/Runtime/MerchantStory.UI.asmdef
@@ -8,7 +8,9 @@
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
         "GUID:c1e338ca6b8246108d25e27ff8baca9c",
-        "GUID:cf181d8cd20b34104b286f65bd9066e3"
+        "GUID:cf181d8cd20b34104b286f65bd9066e3",
+        "GUID:0174f7dfda8ae437aa2ec36c4f63ec97",
+        "GUID:80ecb87cae9c44d19824e70ea7229748"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
